--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <!-- Coding By CodingNepal - youtube.com/codingnepal -->
 <html lang="pt-br" dir="ltr">
   <head>
-    <meta charset="utf-8" />
-    <title>Snake Game</title>
+    <meta charset="UTF-8" />
+    <title>Jogo da Cobra</title>
     <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
@@ -19,12 +19,6 @@
         <span class="high-score">Maior Pontuação: 0</span>
       </div>
       <div class="play-board"></div>
-      <div class="controls">
-        <i data-key="ArrowLeft" class="fa-solid fa-arrow-left-long"></i>
-        <i data-key="ArrowRight" class="fa-solid fa-arrow-right-long"></i>
-        <i data-key="ArrowUp" class="fa-solid fa-arrow-up-long"></i>
-        <i data-key="ArrowDown" class="fa-solid fa-arrow-down-long"></i>
-      </div>
     </div>
   </body>
 </html>
